# kittygram_final

./: .env.example  AGENTS.md  README.md  docker-compose.production.yml  kittygram_workflow.yml  tests.yml
.github/workflows/: main.yml
backend/: .flake8  manage.py  pyproject.toml
backend/cats/: serializers.py
backend/cats/migrations/: 0001_initial.py
backend/kittygram_backend/: settings.py  urls.py
nginx/: nginx.conf
