[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django==3.2.3",
    "djangorestframework==3.12.4",
    "djoser==2.1.0",
    "gunicorn==20.1.0",
    "pillow==9.0.0",
    "psycopg2-binary==2.9.3",
    "pytest==6.2.4",
    "pytest-django==4.4.0",
    "pytest-pythonpath==0.7.3",
    "pyyaml==6.0",
    "webcolors==1.11.1",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "flake8-broken-line>=1.0.0",
    "flake8-isort>=6.1.2",
    "flake8-return>=1.2.0",
    "pep8-naming>=0.15.1",
]
