[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django==3.2.3",
    "djangorestframework==3.12.4",
    "djoser==2.1.0",
    "gunicorn==20.1.0",
    "pillow==9.0.0",
    "psycopg2-binary==2.9.3",
    "pytest==6.2.4",
    "pytest-django==4.4.0",
    "pytest-pythonpath==0.7.3",
    "pyyaml==6.0",
    "webcolors==1.11.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 79
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".tox",
    ".pytest_cache",
    ".mypy_cache",
    "migrations",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["backend", "cats"]
